--- a/blogpost.html
+++ b/blogpost.html
@@ -10,5 +10,8 @@
 <body>
   <h1>Aquí vamos a hacer un blog post</h1>
   <p>y éste es el párrafo de inicio</p>
+  <div class="version">
+    <h2>Esto es añadido en la segunda version</h2>
+  </div>
 </body>
 </html>
